# OpenCL_Wrapper

./: .gitignore  CMakeLists.txt  OclUtils.cpp  OclUtils.h  main.cpp
